--- a/capit-12.html
+++ b/capit-12.html
@@ -34,7 +34,7 @@
       <div class="row__cont">
         <div><b>Exercitium 2</b></div>
         <div><br></div>
-        <div>1. Marcō pat<div class="area" spellcheck="false" contenteditable="true"></div> et māt<div class="area" spellcheck="false" contenteditable="true"></div>, frāt<div class="area" spellcheck="false" contenteditable="true"></div> et soror sunt.</div>
+        <div>1. Mārcō pat<div class="area" spellcheck="false" contenteditable="true"></div> et māt<div class="area" spellcheck="false" contenteditable="true"></div>, frāt<div class="area" spellcheck="false" contenteditable="true"></div> et soror sunt.</div>
         <div>2. Mārcus pat<div class="area" spellcheck="false" contenteditable="true"></div> et māt<div class="area" spellcheck="false" contenteditable="true"></div>, frāt<div class="area" spellcheck="false" contenteditable="true"></div> et sorōrem habet.</div>
         <div>3. Iūliae duo frāt<div class="area" spellcheck="false" contenteditable="true"></div> sunt: Iūlia duōs frāt<div class="area" spellcheck="false" contenteditable="true"></div> habet.</div>
         <div>4. Nōmina frāt<div class="area" spellcheck="false" contenteditable="true"></div> sunt Mārcus et Quīntus.</div>
@@ -53,7 +53,7 @@
         <div><br></div>
         <div><i><div class="area" spellcheck="false" contenteditable="true">arma</div> <div class="area" spellcheck="false" contenteditable="true">armātus</div> <div class="area" spellcheck="false" contenteditable="true">avunculus</div> <div class="area" spellcheck="false" contenteditable="true">cognōmen</div> <div class="area" spellcheck="false" contenteditable="true">fert</div> <div class="area" spellcheck="false" contenteditable="true">frāter</div> <div class="area" spellcheck="false" contenteditable="true">gladius</div> <div class="area" spellcheck="false" contenteditable="true">mīles</div> <div class="area" spellcheck="false" contenteditable="true">nōmen</div> <div class="area" spellcheck="false" contenteditable="true">pīlum</div> <div class="area" spellcheck="false" contenteditable="true">praenōmen</div> <div class="area" spellcheck="false" contenteditable="true">scūtum</div> <div class="area" spellcheck="false" contenteditable="true">soror</div> <div class="area" spellcheck="false" contenteditable="true">trīstis</div> <div class="area" spellcheck="false" contenteditable="true">vester</div></i></div>
         <div><br></div>
-        <div>1. Marcō et Quīntō ūna <div class="area" spellcheck="false" contenteditable="true"></div> est: Iūlia.</div>
+        <div>1. Mārcō et Quīntō ūna <div class="area" spellcheck="false" contenteditable="true"></div> est: Iūlia.</div>
         <div>2. Iūliae duo <div class="area" spellcheck="false" contenteditable="true"></div> sunt: Mārcus et Quīntus.</div>
         <div>3. Frāter Aemiliae, cui <div class="area" spellcheck="false" contenteditable="true"></div> est Aemilius, <div class="area" spellcheck="false" contenteditable="true"></div> liberōrum est.</div>
         <div>4. Pūblius <div class="area" spellcheck="false" contenteditable="true"></div> est; alia <div class="area" spellcheck="false" contenteditable="true"></div> sunt Mārcus, Quīntus, Titus.</div>
