--- a/ultra-12.html
+++ b/ultra-12.html
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
       <div class="row__cont">
-        <div><b>2. Поставить прилагательные в нужную форму:</b></div>
+        <div><b>2. Поставить прилагательные в нужную форму.</b></div>
         <div><br></div>
         <div>1. Hoc flūmen <div class="area" spellcheck="false" contenteditable="true">lātus</div> est quam illud.</div>
         <div>2. Haec herba, quae <div class="area" spellcheck="false" contenteditable="true">amārus</div> est quam illa, medicāmen <div class="area" spellcheck="false" contenteditable="true">lētālis</div> est.</div>
