--- a/capit-12.html
+++ b/capit-12.html
@@ -253,8 +253,8 @@
         <div>10. Pretium gemmae magn<div class="area" spellcheck="false" contenteditable="true"></div> et grav<div class="area" spellcheck="false" contenteditable="true"></div> est sēstertiī centum.</div>
         <div>11. Aemilia mult<div class="area" spellcheck="false" contenteditable="true"></div> gemmās grav<div class="area" spellcheck="false" contenteditable="true"></div> habet.</div>
         <div>12. Magnum est pretium gemmārum grav<div class="area" spellcheck="false" contenteditable="true"></div>.</div>
-        <div>13. Ōs vocābulum nōn long<div class="area" spellcheck="false" contenteditable="true"></div>, sed brev<div class="area" spellcheck="false" contenteditable="true"></div> est; in hōc vocābulō brev<div class="area" spellcheck="false" contenteditable="true"></div> duae litterae sunt.</div>
-        <div>14. Ōs et pēs vocābula nōn long<div class="area" spellcheck="false" contenteditable="true"></div>, sed brev<div class="area" spellcheck="false" contenteditable="true"></div> sunt.</div>
+        <div>13. <i>Ōs</i> vocābulum nōn long<div class="area" spellcheck="false" contenteditable="true"></div>, sed brev<div class="area" spellcheck="false" contenteditable="true"></div> est; in hōc vocābulō brev<div class="area" spellcheck="false" contenteditable="true"></div> duae litterae sunt.</div>
+        <div>14. <i>Ōs</i> et <i>pēs</i> vocābula nōn long<div class="area" spellcheck="false" contenteditable="true"></div>, sed brev<div class="area" spellcheck="false" contenteditable="true"></div> sunt.</div>
         <div><br></div>
       </div>
     </div>
