--- a/capit-12.html
+++ b/capit-12.html
@@ -128,7 +128,7 @@
         <div>4. Ātrium et peristȳlum partēs vīll<div class="area" spellcheck="false" contenteditable="true"></div> Rōmān<div class="area" spellcheck="false" contenteditable="true"></div> sunt.</div>
         <div>5. Praenōmen est pars prīma nōmin<div class="area" spellcheck="false" contenteditable="true"></div> Rōmān<div class="area" spellcheck="false" contenteditable="true"></div>.</div>
         <div>6. Aegyptus pars Āfric<div class="area" spellcheck="false" contenteditable="true"></div> est.</div>
-        <div>7. Magna pars Eurōp<div class="area" spellcheck="false" contenteditable="true"></div> est in imperio Rōmānō.</div>
+        <div>7. Magna pars Eurōp<div class="area" spellcheck="false" contenteditable="true"></div> est in imperiō Rōmānō.</div>
         <div><br></div>
       </div>
     </div>
@@ -156,7 +156,7 @@
         <div>2. In exercit<div class="area" spellcheck="false" contenteditable="true"></div> Rōmānō multī mīlitēs sunt.</div>
         <div>3. Dux exercit<div class="area" spellcheck="false" contenteditable="true"></div> est quī exercit<div class="area" spellcheck="false" contenteditable="true"></div> dūcit.</div>
         <div>4. Dux Rōmānus magnō exercit<div class="area" spellcheck="false" contenteditable="true"></div> imperat.</div>
-        <div>5. In Germāniā et in Britanniā magnī exercit<div class="area" spellcheck="false" contenteditable="true"></div> Rōmāni sunt, quī contrā magnōs hostium exercit<div class="area" spellcheck="false" contenteditable="true"></div> pugnant.</div>
+        <div>5. In Germāniā et in Britanniā magnī exercit<div class="area" spellcheck="false" contenteditable="true"></div> Rōmānī sunt, quī contrā magnōs hostium exercit<div class="area" spellcheck="false" contenteditable="true"></div> pugnant.</div>
         <div>6. Graecī et Gallī iam exercit<div class="area" spellcheck="false" contenteditable="true"></div> Rōmānīs pārent.</div>
         <div>7. Multī Graecī et Gallī in exercit<div class="area" spellcheck="false" contenteditable="true"></div> Rōmānīs mīlitant.</div>
         <div>8. Ducēs exercit<div class="area" spellcheck="false" contenteditable="true"></div> Romānōrum ā mīlitibus suīs nōn discēdunt.</div>
