--- a/ultra-12.html
+++ b/ultra-12.html
@@ -26,7 +26,7 @@
         <div>pass<b>us</b> long<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>querc<b>us</b> annōs<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>grad<b>ūs</b> alt<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>corp<b>us</b> lev<b>e</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>corpus lev<b>e</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>arc<b>ūs</b> grav<b>ēs</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><br></div>
       </div>
